--- a/angular.json
+++ b/angular.json
@@ -91,8 +91,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "9c57139f-5a2d-4daf-a7b7-eeae18e2ad6b"
   }
 }
